--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assignment-6/lib/forge-std"]
 	path = Assignment-6/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Assignment-6/lib/openzeppelin-contracts"]
+	path = Assignment-6/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
